# LaTa

./: README.md  pyproject.toml
src/lata/: Taskfile.yml  __init__.py  __main__.py
src/lata/tests/: example_usage.py
