[project]
name = "lata"
version = "0.1.2"
description = "一个简单易用的 Taskfile 启动器包，提供交互式任务选择界面"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=10.0.0",
    "pyyaml>=5.0.0",
]
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lata"
Repository = "https://github.com/yourusername/lata"
Issues = "https://github.com/yourusername/lata/issues"

[project.scripts]
lata = "lata.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lata"]
package-dir = {"" = "src"}


